--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -65,6 +65,7 @@ body {
     font-size: $default-font-size;
     text-transform: uppercase;
     font-weight: 700;
+    font-size: $default-font-size;
 
 }
 
