--- a/sass/abstract/_variablse.scss
+++ b/sass/abstract/_variablse.scss
@@ -5,6 +5,13 @@ $color-primary-grey:#777;
 $color-primary-black:rgb(24, 24, 24);
 $color-grey-light-1:#f7f7f7f7;
 
+$color-secondery-light:#ffb900;
+$color-secondery-dark:#ff7730;
+
+$color-tertiary-light:#2998ff;
+$color-tertiary-dark:#5643fa;
+
+
 
 //font size //
 $default-font-size:1.6rem;
