--- a/sass/app.scss
+++ b/sass/app.scss
@@ -9,6 +9,7 @@
 @import "base/utilities";
 
 @import "component/button";
+@import "component/card";
 @import "component/composition";
 @import "component/feature-box";
 
