--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -7,6 +7,14 @@
     margin-bottom: 8rem;
 }
 
+.u-margin-top-large {
+    margin-top: 8rem;
+}
+
+.u-margin-top-huge {
+    margin-top: 10rem;
+}
+
 .u-margin-bottom-medium {
     margin-bottom: 5rem;
 }
