--- a/sass/component/_button.scss
+++ b/sass/component/_button.scss
@@ -69,6 +69,7 @@
     &--animated {
         animation: moveFromBottom .5s ease-out .75s backwards;
     }
+
 }
 
 
@@ -78,6 +79,15 @@
 
     &::after {
         background-color: white;
+    }
+}
+
+.btn--green {
+    background-color: $color-primary-darker;
+    color: white;
+
+    &::after {
+        background-color: $color-primary-darker;
     }
 }
 
