--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -23,3 +23,9 @@
         -o-transform: skewY(7deg);
     }
 }
+
+.section-tours {
+    background-color: $color-grey-light-1;
+    padding: 25rem 0 20rem 0;
+    margin-top: -10rem;
+}
