--- a/sass/app.scss
+++ b/sass/app.scss
@@ -8,11 +8,15 @@
 @import "base/typography";
 @import "base/utilities";
 
+@import "component/bg-video";
 @import "component/button";
 @import "component/card";
 @import "component/composition";
 @import "component/feature-box";
+@import "component/form";
+@import "component/story";
 
+@import "layout/footer";
 @import "layout/grid";
 @import "layout/header";
 
