--- a/sass/app.css
+++ b/sass/app.css
@@ -260,7 +260,26 @@ body {
   margin-bottom: 2rem;
 }
 
+.bg-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -10;
+  height: 100%;
+  width: 100%;
+  opacity: .15;
+  overflow: hidden;
+}
+
+.bg-video__content {
+  height: 100%;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
 /* Button Style */
+.btn,
 .btn:link,
 .btn:visited {
   text-transform: uppercase;
@@ -279,8 +298,11 @@ body {
   -moz-transition: all 0.5s ease-out;
   -ms-transition: all 0.5s ease-out;
   -o-transition: all 0.5s ease-out;
+  border: none;
+  cursor: pointer;
 }
 
+.btn:hover,
 .btn:link:hover,
 .btn:visited:hover {
   transform: translateY(-0.3rem);
@@ -292,8 +314,12 @@ body {
           box-shadow: 0 1rem 1.5rem rgba(24, 24, 24, 0.459);
 }
 
+.btn:active, .btn:focus,
 .btn:link:active,
-.btn:visited:active {
+.btn:link:focus,
+.btn:visited:active,
+.btn:visited:focus {
+  outline: none;
   transform: translateY(-0.1rem);
   -webkit-transform: translateY(-0.1rem);
   -moz-transform: translateY(-0.1rem);
@@ -303,6 +329,7 @@ body {
           box-shadow: 0 0.5rem 1rem rgba(24, 24, 24, 0.596);
 }
 
+.btn::after,
 .btn:link::after,
 .btn:visited::after {
   content: "";
@@ -325,6 +352,7 @@ body {
   -o-transition: all 0.5s ease-out;
 }
 
+.btn:hover::after,
 .btn:link:hover::after,
 .btn:visited:hover::after {
   transform: scaleX(1.4) scaleY(1.6);
@@ -335,6 +363,7 @@ body {
   opacity: 0;
 }
 
+.btn--animated,
 .btn:link--animated,
 .btn:visited--animated {
   -webkit-animation: moveFromBottom .5s ease-out .75s backwards;
@@ -675,6 +704,294 @@ body {
   font-size: 1.5rem;
 }
 
+.form__group :not(:last-child) {
+  margin-bottom: 2rem;
+}
+
+.form__input {
+  font-size: 1.5rem;
+  font-family: inherit;
+  padding: 1.5rem 2rem;
+  background-color: rgba(255, 255, 255, 0.651);
+  border-radius: 2px;
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  -ms-border-radius: 2px;
+  -o-border-radius: 2px;
+  color: inherit;
+  border: none;
+  width: 90%;
+  display: block;
+  border-bottom: 3px solid transparent;
+  transition: all 0.3s ease-in-out;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -ms-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+}
+
+.form__input:focus {
+  outline: none;
+  -webkit-box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.397);
+          box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.397);
+  border-bottom: 3px solid #55c57a;
+}
+
+.form__input:focus:invalid {
+  border-bottom: 2px solid #ff7730;
+}
+
+.form__input::-webkit-input-placeholder {
+  color: #222222;
+}
+
+.form__label {
+  font-size: 1.5rem;
+  font-weight: 700;
+  margin-left: 2rem;
+  display: block;
+  transition: all 0.5s;
+  -webkit-transition: all 0.5s;
+  -moz-transition: all 0.5s;
+  -ms-transition: all 0.5s;
+  -o-transition: all 0.5s;
+}
+
+.form__input:placeholder-shown + .form__label {
+  opacity: 0;
+  visibility: hidden;
+  transform: translateY(-3rem);
+  -webkit-transform: translateY(-3rem);
+  -moz-transform: translateY(-3rem);
+  -ms-transform: translateY(-3rem);
+  -o-transform: translateY(-3rem);
+}
+
+.form__radio-group {
+  width: 49%;
+  display: inline-block;
+}
+
+.form__radio-input {
+  display: none;
+}
+
+.form__radio-label {
+  cursor: pointer;
+  font-size: 1.6rem;
+  color: black;
+  position: relative;
+  padding-left: 4.5rem;
+}
+
+.form__radio-button {
+  width: 3rem;
+  height: 3rem;
+  border: 5px solid #55c57a;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  display: inline-block;
+  position: absolute;
+  top: -.4rem;
+  left: 0;
+}
+
+.form__radio-button::after {
+  content: "";
+  display: block;
+  height: 1.3rem;
+  width: 1.3rem;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+  background-color: #55c57a;
+  opacity: 0;
+  transition: all 0.1s;
+  -webkit-transition: all 0.1s;
+  -moz-transition: all 0.1s;
+  -ms-transition: all 0.1s;
+  -o-transition: all 0.1s;
+}
+
+.form__radio-input:checked ~ .form__radio-label .form__radio-button::after {
+  opacity: 1;
+}
+
+.story {
+  width: 75%;
+  margin: 0 auto;
+  -webkit-box-shadow: 0 3rem 6rem rgba(0, 0, 0, 0.473);
+          box-shadow: 0 3rem 6rem rgba(0, 0, 0, 0.473);
+  background-color: rgba(255, 255, 255, 0.281);
+  padding: 6rem;
+  padding-left: 9rem;
+  border-radius: 3px;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -o-border-radius: 3px;
+  font-size: 1.6rem;
+  transform: skewX(-12deg);
+  -webkit-transform: skewX(-12deg);
+  -moz-transform: skewX(-12deg);
+  -ms-transform: skewX(-12deg);
+  -o-transform: skewX(-12deg);
+  overflow: hidden;
+}
+
+.story__shape {
+  width: 15rem;
+  height: 15rem;
+  float: left;
+  shape-outside: circle(50% at 50% 50%);
+  -webkit-clip-path: circle(50% at 50% 50%);
+          clip-path: circle(50% at 50% 50%);
+  transform: translateX(-3rem) skewX(12deg);
+  -webkit-transform: translateX(-3rem) skewX(12deg);
+  -moz-transform: translateX(-3rem) skewX(12deg);
+  -ms-transform: translateX(-3rem) skewX(12deg);
+  -o-transform: translateX(-3rem) skewX(12deg);
+  position: relative;
+  overflow: hidden;
+}
+
+.story__image {
+  height: 100%;
+  transform: translateX(-4rem) scale(1.4);
+  -webkit-transform: translateX(-4rem) scale(1.4);
+  -moz-transform: translateX(-4rem) scale(1.4);
+  -ms-transform: translateX(-4rem) scale(1.4);
+  -o-transform: translateX(-4rem) scale(1.4);
+  transition: all 0.5s ease;
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  -ms-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+  overflow: hidden;
+}
+
+.story__text {
+  transform: skewX(12deg);
+  -webkit-transform: skewX(12deg);
+  -moz-transform: skewX(12deg);
+  -ms-transform: skewX(12deg);
+  -o-transform: skewX(12deg);
+}
+
+.story__caption {
+  position: absolute;
+  opacity: 0;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, 20%);
+  -webkit-transform: translate(-50%, 20%);
+  -moz-transform: translate(-50%, 20%);
+  -ms-transform: translate(-50%, 20%);
+  -o-transform: translate(-50%, 20%);
+  text-transform: uppercase;
+  color: white;
+  font-size: 1.7rem;
+  text-align: center;
+  transition: all 0.5s ease-out;
+  -webkit-transition: all 0.5s ease-out;
+  -moz-transition: all 0.5s ease-out;
+  -ms-transition: all 0.5s ease-out;
+  -o-transition: all 0.5s ease-out;
+}
+
+.story:hover .story__caption {
+  opacity: 1;
+  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+}
+
+.story:hover .story__image {
+  transform: translateX(-4rem) scale(1);
+  -webkit-transform: translateX(-4rem) scale(1);
+  -moz-transform: translateX(-4rem) scale(1);
+  -ms-transform: translateX(-4rem) scale(1);
+  -o-transform: translateX(-4rem) scale(1);
+  -webkit-filter: blur(3px) brightness(80%);
+  filter: blur(3px) brightness(80%);
+  overflow: hidden;
+}
+
+.footer {
+  background-color: rgba(0, 0, 0, 0.849);
+  padding: 10rem 0;
+  font-size: 1.4rem;
+  color: white;
+}
+
+.footer__logo-box {
+  text-align: center;
+  margin-bottom: 6rem;
+}
+
+.footer__logo {
+  width: 10rem;
+  height: auto;
+}
+
+.footer__navigation {
+  border-top: 1px solid #777;
+  padding-top: 2rem;
+  display: inline-block;
+}
+
+.footer__list {
+  list-style: none;
+}
+
+.footer__item {
+  display: inline-block;
+}
+
+.footer__item:not(:last-child) {
+  margin-right: 1.5rem;
+}
+
+.footer__link:link, .footer__link:visited {
+  color: #f7f7f7f7;
+  background-color: #777;
+  text-decoration: none;
+  text-transform: uppercase;
+  display: inline-block;
+  -webkit-transition: all .2s;
+  transition: all .2s;
+}
+
+.footer__link:hover, .footer__link:active {
+  color: #55c57a;
+  -webkit-box-shadow: 0 1rem 2rem rgba(26, 26, 26, 0.4);
+          box-shadow: 0 1rem 2rem rgba(26, 26, 26, 0.4);
+  -webkit-transform: rotate(5deg) scale(1.3);
+          transform: rotate(5deg) scale(1.3);
+}
+
+.footer__copyright {
+  border-top: 1px solid #777;
+  padding-top: 2rem;
+  width: 80%;
+  float: right;
+}
+
 .row {
   max-width: 114rem;
   margin: 0 auto;
@@ -786,5 +1103,35 @@ body {
   background-color: #f7f7f7f7;
   padding: 25rem 0 20rem 0;
   margin-top: -10rem;
+}
+
+.section-stories {
+  padding: 15rem 8rem;
+  position: relative;
+}
+
+.section-book {
+  padding: 15rem 0;
+  background-image: -webkit-gradient(linear, left top, right bottom, from(rgba(126, 213, 111, 0.8)), to(#16a878d8));
+  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), #16a878d8);
+}
+
+.book {
+  background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.63) 0%, rgba(255, 255, 255, 0.623) 50%, transparent 50%), url(/img/nat-10.jpg);
+  background-size: 100%;
+  border-radius: 3px;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -o-border-radius: 3px;
+  -webkit-box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.521);
+          box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.521);
+  overflow: hidden;
+}
+
+.book__form {
+  width: 50%;
+  padding: 5rem;
+  overflow: hidden;
 }
 /*# sourceMappingURL=app.css.map */
