--- a/sass/component/_button.scss
+++ b/sass/component/_button.scss
@@ -1,4 +1,5 @@
 /* Button Style */
+.btn,
 .btn:link,
 .btn:visited {
     text-transform: uppercase;
@@ -17,6 +18,8 @@
     -moz-transition: all 0.5s ease-out;
     -ms-transition: all 0.5s ease-out;
     -o-transition: all 0.5s ease-out;
+    border: none;
+    cursor: pointer;
 
     &:hover {
         transform: translateY(-0.3rem);
@@ -27,7 +30,9 @@
         box-shadow: 0 1rem 1.5rem rgba($color-primary-black, 0.459);
     }
 
-    &:active {
+    &:active,
+    &:focus {
+        outline: none;
         transform: translateY(-0.1rem);
         -webkit-transform: translateY(-0.1rem);
         -moz-transform: translateY(-0.1rem);
@@ -68,6 +73,7 @@
 
     &--animated {
         animation: moveFromBottom .5s ease-out .75s backwards;
+
     }
 
 }
