--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -29,3 +29,33 @@
     padding: 25rem 0 20rem 0;
     margin-top: -10rem;
 }
+
+.section-stories {
+    padding: 15rem 8rem;
+    position: relative;
+}
+
+.section-book {
+    padding: 15rem 0;
+    background-image: linear-gradient(to right bottom, rgba($color-primary-lighter, 0.8), #16a878d8);
+
+}
+
+.book {
+    background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.63) 0%, rgba(255, 255, 255, 0.623) 50%, transparent 50%), url(/img/nat-10.jpg);
+    background-size: 100%;
+    border-radius: 3px;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    -ms-border-radius: 3px;
+    -o-border-radius: 3px;
+    box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.521);
+    overflow: hidden;
+
+    &__form {
+        width: 50%;
+        padding: 5rem;
+
+        overflow: hidden;
+    }
+}
