--- a/sass/app.scss
+++ b/sass/app.scss
@@ -14,11 +14,13 @@
 @import "component/composition";
 @import "component/feature-box";
 @import "component/form";
+@import "component/popup";
 @import "component/story";
 
 @import "layout/footer";
 @import "layout/grid";
 @import "layout/header";
+@import "layout/navigation";
 
 
 
