--- a/sass/app.css
+++ b/sass/app.css
@@ -1,3 +1,11 @@
+/*
+$breakpoint 
+0-600px phone
+600-900px tab-port
+900-1200px tab-land
+1200-1700 Normal
+1800 Large desktop
+*/
 @-webkit-keyframes moveRight {
   0% {
     opacity: 0;
@@ -23,7 +31,6 @@
     -o-transform: translateX(0);
   }
 }
-
 @keyframes moveRight {
   0% {
     opacity: 0;
@@ -151,11 +158,36 @@
 
 html {
   font-size: 62.5%;
+  /* @include respond(large-desktop) {
+        font-size: 75%; // 1rem= 12px
+    }
+
+    ;
+     */
+}
+
+@media (max-width: 75em) {
+  html {
+    font-size: 56.25%;
+  }
+}
+
+@media (max-width: 56.25em) {
+  html {
+    font-size: 50%;
+  }
 }
 
 body {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  padding: 2.5rem;
+}
+
+@media (max-width: 56.25em) {
+  body {
+    padding: 0;
+  }
 }
 
 body {
@@ -164,7 +196,6 @@ body {
   font-size: 1rem;
   line-height: 1.7;
   color: #777;
-  padding: 2.5rem;
 }
 
 /* Header title style*/
@@ -186,6 +217,13 @@ body {
   -webkit-animation: moveRight .9s ease-out;
 }
 
+@media (max-width: 37.5em) {
+  .heading-primary--main {
+    letter-spacing: 1rem;
+    font-size: 3.5rem;
+  }
+}
+
 .heading-primary--second {
   display: block;
   font-size: 1.6rem;
@@ -193,6 +231,12 @@ body {
   letter-spacing: 1.7rem;
   animation: moveLeft .9s ease-out;
   -webkit-animation: moveLeft .9s ease-out;
+}
+
+@media (max-width: 37.5em) {
+  .heading-primary--second {
+    letter-spacing: .2rem;
+  }
 }
 
 .heading-secondary {
@@ -210,6 +254,18 @@ body {
   -ms-transition: all .5s ease-out;
   -o-transition: all .5s ease-out;
   letter-spacing: 1;
+}
+
+@media (max-width: 56.25em) {
+  .heading-secondary {
+    font-size: 3rem;
+  }
+}
+
+@media (max-width: 37.5em) {
+  .heading-secondary {
+    font-size: 2.2rem;
+  }
 }
 
 .heading-secondary:hover {
@@ -240,10 +296,6 @@ body {
   text-align: center;
 }
 
-.u-margin-bottom-large {
-  margin-bottom: 8rem;
-}
-
 .u-margin-top-large {
   margin-top: 8rem;
 }
@@ -252,8 +304,24 @@ body {
   margin-top: 10rem;
 }
 
+.u-margin-bottom-large {
+  margin-bottom: 8rem;
+}
+
+@media (max-width: 56.25em) {
+  .u-margin-bottom-large {
+    margin-bottom: 5rem;
+  }
+}
+
 .u-margin-bottom-medium {
   margin-bottom: 5rem;
+}
+
+@media (max-width: 56.25em) {
+  .u-margin-bottom-medium {
+    margin-bottom: 3rem;
+  }
 }
 
 .u-margin-bottom-small {
@@ -300,6 +368,22 @@ body {
   -o-transition: all 0.5s ease-out;
   border: none;
   cursor: pointer;
+}
+
+@media (max-width: 56.25em) {
+  .btn,
+  .btn:link,
+  .btn:visited {
+    padding: .8rem 2rem;
+  }
+}
+
+@media (max-width: 75em) {
+  .btn,
+  .btn:link,
+  .btn:visited {
+    padding: 1.3rem 3rem;
+  }
 }
 
 .btn:hover,
@@ -451,8 +535,6 @@ body {
   -moz-border-radius: 5px;
   -ms-border-radius: 5px;
   -o-border-radius: 5px;
-  -webkit-box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
-          box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
 }
 
 .card__slide--front {
@@ -604,6 +686,49 @@ body {
   font-weight: 100;
 }
 
+@media (max-width: 56.25em) {
+  .card {
+    height: auto;
+    border-radius: 5px;
+    background-color: rgba(245, 245, 245, 0.938);
+    -webkit-box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
+            box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
+  }
+  .card__slide {
+    height: auto;
+    position: relative;
+  }
+  .card__slide--back {
+    background-color: orange;
+    -webkit-transform: rotateY(0deg);
+            transform: rotateY(0deg);
+    -webkit-clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%);
+            clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%);
+  }
+  .card:hover .card__slide--front {
+    transform: rotateY(0deg);
+    -webkit-transform: rotateY(0deg);
+    -moz-transform: rotateY(0deg);
+    -ms-transform: rotateY(0deg);
+    -o-transform: rotateY(0deg);
+  }
+  .card__cta {
+    position: relative;
+    top: 0;
+    left: 0;
+    -webkit-transform: translate(0);
+            transform: translate(0);
+    padding: 6rem 3rem 3rem 3rem;
+    width: 100%;
+  }
+  .card__price-box {
+    margin-bottom: 3rem;
+  }
+  .card__price-box-value {
+    font-size: 8rem;
+  }
+}
+
 .composition {
   position: relative;
 }
@@ -628,9 +753,30 @@ body {
   outline-offset: 1.4rem;
 }
 
+@media (max-width: 56.25em) {
+  .composition__photo {
+    position: relative;
+    float: left;
+    width: 33.33333%;
+    -webkit-box-shadow: 0 1.2rem 3rem rgba(0, 0, 0, 0.425);
+            box-shadow: 0 1.2rem 3rem rgba(0, 0, 0, 0.425);
+  }
+}
+
 .composition__photo--p1 {
   left: 0;
   top: -2rem;
+}
+
+@media (max-width: 56.25em) {
+  .composition__photo--p1 {
+    top: 0;
+    transform: scale(1.2);
+    -webkit-transform: scale(1.2);
+    -moz-transform: scale(1.2);
+    -ms-transform: scale(1.2);
+    -o-transform: scale(1.2);
+  }
 }
 
 .composition__photo--p2 {
@@ -638,9 +784,33 @@ body {
   top: 2rem;
 }
 
+@media (max-width: 56.25em) {
+  .composition__photo--p2 {
+    top: -1;
+    transform: scale(1.3);
+    -webkit-transform: scale(1.3);
+    -moz-transform: scale(1.3);
+    -ms-transform: scale(1.3);
+    -o-transform: scale(1.3);
+    z-index: 100;
+  }
+}
+
 .composition__photo--p3 {
   left: 20%;
   top: 10rem;
+}
+
+@media (max-width: 56.25em) {
+  .composition__photo--p3 {
+    top: 0;
+    left: 0;
+    transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    -o-transform: scale(1.1);
+  }
 }
 
 .composition__photo:hover {
@@ -682,6 +852,12 @@ body {
   -o-transition: all 0.5s ease-out;
 }
 
+@media (max-width: 56.25em) {
+  .feature-box {
+    padding: 2rem;
+  }
+}
+
 .feature-box__icon {
   font-size: 6rem;
   margin-bottom: .5rem;
@@ -689,7 +865,14 @@ body {
   background-image: -webkit-gradient(linear, left top, right top, from(#7ed56f), to(#28b485));
   background-image: linear-gradient(to right, #7ed56f, #28b485);
   -webkit-background-clip: text;
+  background-clip: text;
   color: transparent;
+}
+
+@media (max-width: 56.25em) {
+  .feature-box__icon {
+    margin-bottom: 0;
+  }
 }
 
 .feature-box:hover {
@@ -728,6 +911,12 @@ body {
   -moz-transition: all 0.3s ease-in-out;
   -ms-transition: all 0.3s ease-in-out;
   -o-transition: all 0.3s ease-in-out;
+}
+
+@media (max-width: 56.25em) {
+  .form__input {
+    width: 100%;
+  }
 }
 
 .form__input:focus {
@@ -770,6 +959,13 @@ body {
 .form__radio-group {
   width: 49%;
   display: inline-block;
+}
+
+@media (max-width: 56.25em) {
+  .form__radio-group {
+    width: 100%;
+    margin-bottom: 2rem;
+  }
 }
 
 .form__radio-input {
@@ -874,9 +1070,27 @@ body {
   width: 100%;
 }
 
+@media (max-width: 56.25em) {
+  .popup__img {
+    width: 80%;
+  }
+}
+
 .popup__left {
   width: 33.33%;
   display: table-cell;
+}
+
+@media (max-width: 56.25em) {
+  .popup__left {
+    width: 23.33%;
+  }
+}
+
+@media (max-width: 75em) {
+  .popup__left {
+    width: 23.33%;
+  }
 }
 
 .popup__right {
@@ -884,6 +1098,20 @@ body {
   display: table-cell;
   vertical-align: middle;
   padding: 3rem 5rem;
+}
+
+@media (max-width: 56.25em) {
+  .popup__right {
+    width: 46.6666%;
+    padding: 0;
+  }
+}
+
+@media (max-width: 75em) {
+  .popup__right {
+    width: 46.6666%;
+    padding: 0;
+  }
 }
 
 .popup__text {
@@ -899,6 +1127,23 @@ body {
   -webkit-hyphens: auto;
   -moz-hyphens: auto;
   -ms-hyphens: auto;
+}
+
+@media (max-width: 56.25em) {
+  .popup__text {
+    margin-bottom: 1rem;
+    -webkit-column-gap: 2rem;
+            column-gap: 2rem;
+  }
+}
+
+@media (max-width: 75em) {
+  .popup__text {
+    margin-bottom: 2rem;
+    -webkit-column-gap: 3rem;
+            column-gap: 3rem;
+    padding-left: 2rem;
+  }
 }
 
 .popup:target {
@@ -957,6 +1202,24 @@ body {
   overflow: hidden;
 }
 
+@media (max-width: 56.25em) {
+  .story {
+    width: 100%;
+    padding: 4rem;
+    padding-left: 7rem;
+  }
+}
+
+@media (max-width: 37.5em) {
+  .story {
+    transform: skewX(0deg);
+    -webkit-transform: skewX(0deg);
+    -moz-transform: skewX(0deg);
+    -ms-transform: skewX(0deg);
+    -o-transform: skewX(0deg);
+  }
+}
+
 .story__shape {
   width: 15rem;
   height: 15rem;
@@ -971,6 +1234,16 @@ body {
   -o-transform: translateX(-3rem) skewX(12deg);
   position: relative;
   overflow: hidden;
+}
+
+@media (max-width: 37.5em) {
+  .story__shape {
+    transform: translateX(-3rem) skewX(0deg);
+    -webkit-transform: translateX(-3rem) skewX(0deg);
+    -moz-transform: translateX(-3rem) skewX(0deg);
+    -ms-transform: translateX(-3rem) skewX(0deg);
+    -o-transform: translateX(-3rem) skewX(0deg);
+  }
 }
 
 .story__image {
@@ -994,6 +1267,16 @@ body {
   -moz-transform: skewX(12deg);
   -ms-transform: skewX(12deg);
   -o-transform: skewX(12deg);
+}
+
+@media (max-width: 37.5em) {
+  .story__text {
+    transform: skewX(0deg);
+    -webkit-transform: skewX(0deg);
+    -moz-transform: skewX(0deg);
+    -ms-transform: skewX(0deg);
+    -o-transform: skewX(0deg);
+  }
 }
 
 .story__caption {
@@ -1044,13 +1327,25 @@ body {
   color: white;
 }
 
+@media (max-width: 56.25em) {
+  .footer {
+    padding: 8rem 0;
+  }
+}
+
 .footer__logo-box {
   text-align: center;
   margin-bottom: 6rem;
 }
 
+@media (max-width: 56.25em) {
+  .footer__logo-box {
+    margin-bottom: 3rem;
+  }
+}
+
 .footer__logo {
-  width: 10rem;
+  width: 4rem;
   height: auto;
 }
 
@@ -1058,6 +1353,13 @@ body {
   border-top: 1px solid #777;
   padding-top: 2rem;
   display: inline-block;
+}
+
+@media (max-width: 56.25em) {
+  .footer__navigation {
+    width: 100%;
+    text-align: center;
+  }
 }
 
 .footer__list {
@@ -1097,13 +1399,33 @@ body {
   float: right;
 }
 
+@media (max-width: 56.25em) {
+  .footer__copyright {
+    width: 100%;
+    float: none;
+  }
+}
+
 .row {
   max-width: 114rem;
   margin: 0 auto;
 }
 
+@media (max-width: 56.25em) {
+  .row {
+    max-width: 50rem;
+    padding: 0 3rem;
+  }
+}
+
 .row:not(:last-child) {
   margin-bottom: 8rem;
+}
+
+@media (max-width: 56.25em) {
+  .row:not(:last-child) {
+    margin-bottom: 6rem;
+  }
 }
 
 .row::after {
@@ -1118,6 +1440,19 @@ body {
 
 .row [class^="col-"]:not(:last-child) {
   margin-right: 6rem;
+}
+
+@media (max-width: 56.25em) {
+  .row [class^="col-"] {
+    margin-right: 0;
+    margin-bottom: 6rem;
+  }
+}
+
+@media (max-width: 56.25em) {
+  .row [class^="col-"] {
+    width: 100% !important;
+  }
 }
 
 .row .col-1-of-2 {
@@ -1153,6 +1488,13 @@ body {
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
           clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
   position: relative;
+}
+
+@media (max-width: 37.5em) {
+  .header {
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
+            clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
+  }
 }
 
 .header__logo-box {
@@ -1200,6 +1542,20 @@ body {
   cursor: pointer;
 }
 
+@media (max-width: 56.25em) {
+  .navigation__button {
+    top: 4rem;
+    right: 4rem;
+  }
+}
+
+@media (max-width: 37.5em) {
+  .navigation__button {
+    top: 3rem;
+    right: 3rem;
+  }
+}
+
 .navigation__background {
   height: 5rem;
   width: 5rem;
@@ -1218,6 +1574,20 @@ body {
   -moz-transition: all 0.5s cubic-bezier(0.5, 0, 0.75, 0);
   -ms-transition: all 0.5s cubic-bezier(0.5, 0, 0.75, 0);
   -o-transition: all 0.5s cubic-bezier(0.5, 0, 0.75, 0);
+}
+
+@media (max-width: 56.25em) {
+  .navigation__background {
+    top: 4.5rem;
+    right: 4.5rem;
+  }
+}
+
+@media (max-width: 37.5em) {
+  .navigation__background {
+    top: 3rem;
+    right: 3rem;
+  }
 }
 
 .navigation__nav {
@@ -1360,6 +1730,12 @@ body {
   margin-top: -20vh;
 }
 
+@media (max-width: 56.25em) {
+  .section-about {
+    padding: 20rem 0;
+  }
+}
+
 .section-features {
   padding: 20rem 0;
   background-image: -webkit-gradient(linear, left top, right bottom, from(rgba(126, 213, 111, 0.8)), to(#16a878d8)), url("/img/nat-4.jpg");
@@ -1381,15 +1757,33 @@ body {
   -o-transform: skewY(7deg);
 }
 
+@media (max-width: 56.25em) {
+  .section-features {
+    padding: 10rem 0;
+  }
+}
+
 .section-tours {
   background-color: #f7f7f7f7;
   padding: 25rem 0 20rem 0;
   margin-top: -10rem;
 }
 
+@media (max-width: 56.25em) {
+  .section-tours {
+    padding: 20rem 0 15rem 0;
+  }
+}
+
 .section-stories {
   padding: 15rem 8rem;
   position: relative;
+}
+
+@media (max-width: 56.25em) {
+  .section-stories {
+    padding: 12rem 4rem;
+  }
 }
 
 .section-book {
@@ -1411,9 +1805,34 @@ body {
   overflow: hidden;
 }
 
+@media (max-width: 75em) {
+  .book {
+    background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.63) 0%, rgba(255, 255, 255, 0.623) 65%, transparent 65%), url(/img/nat-10.jpg);
+    background-size: cover;
+  }
+}
+
+@media (max-width: 56.25em) {
+  .book {
+    background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.63) 0%, rgba(255, 255, 255, 0.623) 100%), url(/img/nat-10.jpg);
+  }
+}
+
 .book__form {
   width: 50%;
   padding: 5rem;
   overflow: hidden;
+}
+
+@media (max-width: 75em) {
+  .book__form {
+    width: 70%;
+  }
+}
+
+@media (max-width: 56.25em) {
+  .book__form {
+    width: 100%;
+  }
 }
 /*# sourceMappingURL=app.css.map */
