--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -7,9 +7,34 @@
 }
 
 html {
-    font-size: 62.5%;
+    font-size: 62.5%; //1rem =10px  10/16*100= 62.5%
+
+    @include respond(tab-land) {
+        font-size: 56.25%; //1 rem = 9px 
+    }
+
+    ;
+
+    @include respond(tab-port) {
+        font-size: 50%; //1rem = 8px
+    }
+
+    ;
+
+    /* @include respond(large-desktop) {
+        font-size: 75%; // 1rem= 12px
+    }
+
+    ;
+     */
+
 }
 
 body {
     box-sizing: border-box;
+    padding: 2.5rem;
+
+    @include respond(tab-port) {
+        padding: 0;
+    }
 }
