--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -3,9 +3,7 @@
 
 }
 
-.u-margin-bottom-large {
-    margin-bottom: 8rem;
-}
+
 
 .u-margin-top-large {
     margin-top: 8rem;
@@ -15,8 +13,20 @@
     margin-top: 10rem;
 }
 
+.u-margin-bottom-large {
+    margin-bottom: 8rem;
+
+    @include respond(tab-port) {
+        margin-bottom: 5rem;
+    }
+}
+
 .u-margin-bottom-medium {
     margin-bottom: 5rem;
+
+    @include respond(tab-port) {
+        margin-bottom: 3rem;
+    }
 }
 
 .u-margin-bottom-small {
