--- a/sass/component/_card.scss
+++ b/sass/component/_card.scss
@@ -23,7 +23,7 @@
         -moz-border-radius: 5px;
         -ms-border-radius: 5px;
         -o-border-radius: 5px;
-        box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, .15);
+
 
         &--front {
             background-color: rgba(245, 245, 245, 0.938);
@@ -174,6 +174,58 @@
         &-value {
             font-size: 8rem;
             font-weight: 100;
+        }
+    }
+
+    @include respond(tab-port) {
+        height: auto;
+        border-radius: 5px;
+        background-color: rgba(245, 245, 245, 0.938);
+        box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, .15);
+
+        &__slide {
+            height: auto;
+            position: relative;
+
+
+            &--back {
+
+
+                background-color: orange;
+                transform: rotateY(0deg);
+                clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%);
+            }
+        }
+
+
+
+        &:hover &__slide--front {
+            transform: rotateY(0deg);
+            -webkit-transform: rotateY(0deg);
+            -moz-transform: rotateY(0deg);
+            -ms-transform: rotateY(0deg);
+            -o-transform: rotateY(0deg);
+        }
+
+        //back side //
+        &__cta {
+            position: relative;
+            top: 0;
+            left: 0;
+            transform: translate(0);
+            padding: 6rem 3rem 3rem 3rem;
+
+            width: 100%;
+        }
+
+        &__price-box {
+
+            margin-bottom: 3rem;
+
+            &-value {
+                font-size: 8rem;
+
+            }
         }
     }
 }
