--- a/sass/component/_composition.scss
+++ b/sass/component/_composition.scss
@@ -19,19 +19,55 @@
         -o-transition: all 0.5s ease;
         outline-offset: 1.4rem;
 
+        @include respond(tab-port) {
+            position: relative;
+            float: left;
+            width: 33.33333%;
+            box-shadow: 0 1.2rem 3rem rgba(0, 0, 0, 0.425);
+        }
+
         &--p1 {
             left: 0;
             top: -2rem;
+
+            @include respond(tab-port) {
+                top: 0;
+                transform: scale(1.2);
+                -webkit-transform: scale(1.2);
+                -moz-transform: scale(1.2);
+                -ms-transform: scale(1.2);
+                -o-transform: scale(1.2);
+            }
         }
 
         &--p2 {
             right: 0;
             top: 2rem;
+
+            @include respond(tab-port) {
+                top: -1;
+                transform: scale(1.3);
+                -webkit-transform: scale(1.3);
+                -moz-transform: scale(1.3);
+                -ms-transform: scale(1.3);
+                -o-transform: scale(1.3);
+                z-index: 100;
+            }
         }
 
         &--p3 {
             left: 20%;
             top: 10rem;
+
+            @include respond(tab-port) {
+                top: 0;
+                left: 0;
+                transform: scale(1.1);
+                -webkit-transform: scale(1.1);
+                -moz-transform: scale(1.1);
+                -ms-transform: scale(1.1);
+                -o-transform: scale(1.1);
+            }
         }
 
         &:hover {
