--- a/sass/component/_feature-box.scss
+++ b/sass/component/_feature-box.scss
@@ -15,13 +15,22 @@
     -ms-transition: all 0.5s ease-out;
     -o-transition: all 0.5s ease-out;
 
+    @include respond(tab-port) {
+        padding: 2rem;
+    }
+
     &__icon {
         font-size: 6rem;
         margin-bottom: .5rem;
         display: inline-block;
         background-image: linear-gradient(to right, $color-primary-lighter, $color-primary-darker);
         -webkit-background-clip: text;
+        background-clip: text;
         color: transparent;
+
+        @include respond(tab-port) {
+            margin-bottom: 0;
+        }
     }
 
     &:hover {
