--- a/sass/component/_form.scss
+++ b/sass/component/_form.scss
@@ -25,6 +25,11 @@
         -ms-transition: all 0.3s ease-in-out;
         -o-transition: all 0.3s ease-in-out;
 
+        @include respond(tab-port) {
+            width: 100%;
+
+        }
+
         &:focus {
             outline: none;
             box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.397);
@@ -67,6 +72,11 @@
     &__radio-group {
         width: 49%;
         display: inline-block;
+
+        @include respond(tab-port) {
+            width: 100%;
+            margin-bottom: 2rem;
+        }
     }
 
     &__radio-input {
@@ -127,7 +137,4 @@
     &__radio-input:checked~&__radio-label &__radio-button::after {
         opacity: 1;
     }
-
-
-
 }
