--- a/sass/component/_popup.scss
+++ b/sass/component/_popup.scss
@@ -35,16 +35,32 @@
         -moz-transition: all .4s .2s ease-out;
         -ms-transition: all .4s .2s ease-out;
         -o-transition: all .4s .2s ease-out;
+
+
     }
 
     &__img {
         display: block;
         width: 100%;
+
+        @include respond(tab-port) {
+            width: 80%;
+
+        }
     }
 
     &__left {
         width: 33.33%;
         display: table-cell;
+
+        @include respond(tab-port) {
+            width: 23.33%;
+
+        }
+
+        @include respond(tab-land) {
+            width: 23.33%;
+        }
     }
 
     &__right {
@@ -52,6 +68,18 @@
         display: table-cell;
         vertical-align: middle;
         padding: 3rem 5rem;
+
+        @include respond(tab-port) {
+            width: 46.6666%;
+            padding: 0;
+
+        }
+
+
+        @include respond(tab-land) {
+            width: 46.6666%;
+            padding: 0;
+        }
     }
 
     &__text {
@@ -64,6 +92,19 @@
         -webkit-hyphens: auto;
         -moz-hyphens: auto;
         -ms-hyphens: auto;
+
+        @include respond(tab-port) {
+            margin-bottom: 1rem;
+            column-gap: 2rem;
+
+        }
+
+        @include respond(tab-land) {
+            margin-bottom: 2rem;
+            column-gap: 3rem;
+            padding-left: 2rem;
+
+        }
     }
 
     &:target {
