--- a/sass/component/_story.scss
+++ b/sass/component/_story.scss
@@ -18,6 +18,20 @@
     -o-transform: skewX(-12deg);
     overflow: hidden;
 
+    @include respond(tab-port) {
+        width: 100%;
+        padding: 4rem;
+        padding-left: 7rem;
+    }
+
+    @include respond(phone) {
+        transform: skewX(0deg);
+        -webkit-transform: skewX(0deg);
+        -moz-transform: skewX(0deg);
+        -ms-transform: skewX(0deg);
+        -o-transform: skewX(0deg);
+    }
+
     &__shape {
         width: 15rem;
         height: 15rem;
@@ -31,6 +45,14 @@
         -o-transform: translateX(-3rem) skewX(12deg);
         position: relative;
         overflow: hidden;
+
+        @include respond(phone) {
+            transform: translateX(-3rem) skewX(0deg);
+            -webkit-transform: translateX(-3rem) skewX(0deg);
+            -moz-transform: translateX(-3rem) skewX(0deg);
+            -ms-transform: translateX(-3rem) skewX(0deg);
+            -o-transform: translateX(-3rem) skewX(0deg);
+        }
     }
 
     &__image {
@@ -54,6 +76,14 @@
         -moz-transform: skewX(12deg);
         -ms-transform: skewX(12deg);
         -o-transform: skewX(12deg);
+
+        @include respond(phone) {
+            transform: skewX(0deg);
+            -webkit-transform: skewX(0deg);
+            -moz-transform: skewX(0deg);
+            -ms-transform: skewX(0deg);
+            -o-transform: skewX(0deg);
+        }
     }
 
     &__caption {
