--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -4,17 +4,23 @@
     font-size: 1.4rem;
     color: white;
 
+    @include respond(tab-port) {
+        padding: 8rem 0;
+    }
 
 
     &__logo-box {
         text-align: center;
         margin-bottom: 6rem;
 
+        @include respond(tab-port) {
+            margin-bottom: 3rem;
+        }
 
     }
 
     &__logo {
-        width: 10rem;
+        width: 4rem;
         height: auto;
     }
 
@@ -23,6 +29,10 @@
         padding-top: 2rem;
         display: inline-block;
 
+        @include respond(tab-port) {
+            width: 100%;
+            text-align: center;
+        }
     }
 
     &__list {
@@ -63,6 +73,10 @@
         width: 80%;
         float: right;
 
+        @include respond(tab-port) {
+            width: 100%;
+            float: none;
+        }
 
     }
 }
