--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -2,6 +2,10 @@
     background-color: $color-grey-light-1;
     padding: 25rem 0;
     margin-top: -20vh;
+
+    @include respond(tab-port) {
+        padding: 20rem 0;
+    }
 }
 
 .section-features {
@@ -22,17 +26,29 @@
         -ms-transform: skewY(7deg);
         -o-transform: skewY(7deg);
     }
+
+    @include respond(tab-port) {
+        padding: 10rem 0;
+    }
 }
 
 .section-tours {
     background-color: $color-grey-light-1;
     padding: 25rem 0 20rem 0;
     margin-top: -10rem;
+
+    @include respond(tab-port) {
+        padding: 20rem 0 15rem 0;
+    }
 }
 
 .section-stories {
     padding: 15rem 8rem;
     position: relative;
+
+    @include respond(tab-port) {
+        padding: 12rem 4rem;
+    }
 }
 
 .section-book {
@@ -52,10 +68,26 @@
     box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.521);
     overflow: hidden;
 
+    @include respond(tab-land) {
+        background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.63) 0%, rgba(255, 255, 255, 0.623) 65%, transparent 65%), url(/img/nat-10.jpg);
+        background-size: cover;
+    }
+
+    @include respond(tab-port) {
+        background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.63) 0%, rgba(255, 255, 255, 0.623) 100%), url(/img/nat-10.jpg);
+    }
+
     &__form {
         width: 50%;
         padding: 5rem;
-
         overflow: hidden;
+
+        @include respond(tab-land) {
+            width: 70%;
+        }
+
+        @include respond(tab-port) {
+            width: 100%;
+        }
     }
 }
